--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,53 @@
-body {
-    background-color: bisque;
+main {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto auto;
+}
+
+#boardTitle {
+    grid-row: 1 / 2;
+    grid-column: 1 / 3;
+}
+
+#customers {
+    grid-row: 2 / 3;
+    grid-column: 1 / 3;
+
+    border-collapse: collapse;
+    width: 350px;
+}
+
+#customers td,
+#customers th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+#customers tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+#customers tr:hover {
+    background-color: #ddd;
+}
+
+#customers th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #04AA6D;
+    color: white;
+}
+
+#boardDisplay {
+    width: 350px;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
+}
+
+#refreshBtn {
+    justify-self: center;
+    align-self: center;
+    /* background-color: teal; */
 }
