--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,12 @@
 main {
     display: grid;
+    grid-gap: 35px;
     grid-template-columns: auto auto;
     grid-template-rows: auto auto auto;
 }
 
 #boardTitle {
+    /* justify-self: start; */
     grid-row: 1 / 2;
     grid-column: 1 / 3;
 }
@@ -40,14 +42,41 @@ main {
 }
 
 #boardDisplay {
+    justify-self: end;
     width: 350px;
     display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: auto auto auto;
 }
 
 #refreshBtn {
     justify-self: center;
     align-self: center;
-    /* background-color: teal; */
+}
+
+#socreForm {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto auto;
+    grid-gap: 25px;
+    /* background-color: thistle; */
+}
+
+#nameInput {
+    grid-row: 1 / 2;
+    grid-column: 1 / 3;
+}
+
+#scoreInput {
+    grid-row: 2 / 3;
+    grid-column: 1 / 3;
+}
+
+#submitBtn {
+    grid-row: 3 / 4;
+    grid-column: 2 / 3;
+}
+
+#boardForm {
+    justify-self: start;
 }
