Feat: link Front-end side with api functions

--- a/src/style.scss
+++ b/src/style.scss
@@ -22,7 +22,7 @@ main {
       font-size: xx-large;
     }
 
-    #refreshBtn {
+    #refreshDiv {
       justify-self: center;
       align-self: center;
     }
