Feat: update table after submission

--- a/src/style.scss
+++ b/src/style.scss
@@ -21,6 +21,9 @@ main {
   #boardDisplay {
     justify-self: end;
     width: 350px;
+    height: 500px;
+    overflow-y: scroll;
+    overflow-x: hidden;
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: auto auto auto;
