--- a/src/style.scss
+++ b/src/style.scss
@@ -21,7 +21,7 @@ main {
   #boardDisplay {
     justify-self: end;
     width: 350px;
-    height: 500px;
+    // height: 500px;
     overflow-y: scroll;
     overflow-x: hidden;
     display: grid;
