--- a/src/style.scss
+++ b/src/style.scss
@@ -20,23 +20,25 @@ main {
 
   #boardDisplay {
     justify-self: end;
-    width: 350px;
-    // height: 500px;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: auto auto auto;
 
+    h3 {
+      display: inline-block;
+    }
+
+    .tableScroll{
+      max-height: 400px;
+      overflow-y: scroll;
+    }
+    
     #boardTitle {
       position: absolute;
       top: -90px;
       font-size: xx-large;
     }
 
-    #refreshDiv {
-      justify-self: center;
-      align-self: center;
+    #btnsDiv {
+      display: inline;
+      float: right;
     }
 
     #table {
@@ -56,7 +58,7 @@ main {
         padding-top: 12px;
         padding-bottom: 12px;
         text-align: left;
-        background-color: #a092f0;
+        background-color: #000000;
         color: white;
       }
 
@@ -76,11 +78,6 @@ main {
     justify-self: start;
 
     #scoreForm {
-      display: grid;
-      grid-template-columns: auto auto;
-      grid-template-rows: auto auto auto;
-      grid-gap: 25px;
-
       #nameInput {
         grid-row: 1 / 2;
         grid-column: 1 / 3;
@@ -98,6 +95,8 @@ main {
     }
 
     #errors {
+      position: relative;
+      top: 20px;
       color: rgb(255, 0, 0);
       font-size: large;
     }
