--- a/src/card.scss
+++ b/src/card.scss
@@ -1,24 +1,21 @@
 @import url('https://rsms.me/inter/inter.css');
 
 .darkmode--activated {
-  color: black
+  color: black;
 }
 
 :root {
   --color-light: white;
   --color-dark: #212121;
   --color-signal: #fab700;
-  
   --color-background: var(--color-light);
   --color-text: var(--color-dark);
   --color-accent: var(--color-signal);
-  
-  --size-bezel: .5rem;
+  --size-bezel: 0.5rem;
   --size-radius: 4px;
-  
+
   line-height: 1.4;
-  
-  font-size: calc(.6rem + .4vw);
+  font-size: calc(0.6rem + 0.4vw);
   color: var(--color-text);
   background: var(--color-background);
   font-weight: 300;
@@ -38,8 +35,8 @@ mark {
   margin-top: calc(4 * var(--size-bezel));
   border-radius: var(--size-radius);
   border: 3px solid var(--color-shadow, currentColor);
-  box-shadow: .5rem .5rem 0 var(--color-shadow, currentColor);
-  
+  box-shadow: 0.5rem 0.5rem 0 var(--color-shadow, currentColor);
+
   *:first-child {
     margin-top: 0;
   }
@@ -47,14 +44,13 @@ mark {
 
 .input {
   position: relative;
-  
+
   &__label {
     position: absolute;
     left: 0;
     top: 0;
-    padding: calc(var(--size-bezel) * 0.75) calc(var(--size-bezel) * .5);
-    margin: calc(var(--size-bezel) * 0.75 + 3px) calc(var(--size-bezel) * .5);
-    background: pink;
+    padding: calc(var(--size-bezel) * 0.75) calc(var(--size-bezel) * 0.5);
+    margin: calc(var(--size-bezel) * 0.75 + 3px) calc(var(--size-bezel) * 0.5);
     white-space: nowrap;
     transform: translate(0, 0);
     transform-origin: 0 0;
@@ -63,6 +59,7 @@ mark {
     font-weight: bold;
     line-height: 1.2;
   }
+
   &__field {
     box-sizing: border-box;
     display: block;
@@ -72,17 +69,16 @@ mark {
     color: currentColor;
     background: transparent;
     border-radius: var(--size-radius);
-    
+
     &:focus,
     &:not(:placeholder-shown) {
       & + .input__label {
-        transform: translate(.25rem, -65%) scale(.8);
+        transform: translate(0.25rem, -65%) scale(0.8);
         color: var(--color-accent);
       }
     }
   }
 }
-
 
 .button-group {
   margin-top: calc(var(--size-bezel) * 2.5);
@@ -95,11 +91,11 @@ button {
   border: none;
   border-radius: var(--size-radius);
   font-weight: 900;
-  
-  &[type=reset]{
+
+  &[type=reset] {
     background: var(--color-background);
     font-weight: 200;
-  } 
+  }
 }
 
 button + button {
@@ -108,8 +104,9 @@ button + button {
 
 .icon {
   display: inline-block;
-  width: 1em; height: 1em;
-  margin-right: .5em;
+  width: 1em;
+  height: 1em;
+  margin-right: 0.5em;
 }
 
 .hidden {
